# flask_my_blog_system

./: .gitignore  Dockerfile  app.py  config.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  seed.py
api/: views.py
api/resources/: image_resources.py  target.py  target_resources.py  user_resources.py
api/schemas/: target_schema.py  user_schema.py
auth/: helpers.py  views.py
doc/: flask_my_blog_system_databse_structure.md
env/: .env
flask_app/: Dockerfile  README.md  app.ini  app.py  pyproject.toml  requirements.txt  seed.py  targets.py
flask_app/api/resources/: target_resources.py
flask_app/auth/: decorators.py
flask_app/migrations/: env.py
flask_app/migrations/versions/: 4aed1cf72331_update_add_auth_do.py  6a158ab001a8_update_add_role.py  ae47e28920c3_modify_modify_class_name.py  c22d573e8ba5_modify_add_role_table.py
flask_app/models/: test.py
flask_app/seed/: target.sql
instance/: db.sqlite3
migrations/: env.py
migrations/versions/: 02a93ac77b6d_.py  0949ef039e0c_inital_migration.py  60ab04e97838_.py  937162791976_.py  cc2411788929_inital_migration.py  da76b026676b_inital_migration.py  e57dc6489513_.py
models/: __init__.py  auth_do.py  bibao.py  target_do.py  user_do.py
nginx/: Dockerfile  nginx.conf
